--- a/email-templates/review-request.html
+++ b/email-templates/review-request.html
@@ -79,7 +79,7 @@
         .cta-button {
             display: inline-block;
             background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
-            color: white;
+            color: white !important;
             text-decoration: none;
             padding: 14px 28px;
             border-radius: 8px;
@@ -159,7 +159,7 @@
     <div class="container">
         <div class="header">
             <h1>🐕 How was your playdate?</h1>
-            <p>We hope you and {{userDogName}} had a wonderful time!</p>
+            <p>We hope you had a wonderful time!</p>
         </div>
         
         <div class="content">
@@ -195,10 +195,10 @@
             <div class="tips">
                 <h4>💡 Why reviews matter:</h4>
                 <ul>
-                    <li>Help other dog owners find great playmates</li>
+                    <li>Help other dog lovers find great playmates</li>
                     <li>Build trust in our community</li>
                     <li>Share your experience to help others</li>
-                    <li>Recognize awesome dog parents</li>
+                    <li>Recognize awesome petpals and dog parents/li>
                 </ul>
             </div>
             
