--- a/email-templates/new-message-notification.html
+++ b/email-templates/new-message-notification.html
@@ -92,7 +92,7 @@
         .cta-button {
             display: inline-block;
             background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
-            color: white;
+            color: white !important;
             text-decoration: none;
             padding: 14px 28px;
             border-radius: 8px;
